--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -77,3 +77,17 @@ body {
 #status tr:hover {
   background-color: #ddd;
 }
+
+.scrollable-box {
+  width: 100%;
+  overflow-x: auto;
+}
+
+pre {
+  font-family: "Noto Sans Mono", monospace;
+  white-space: nowrap;
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 3px;
+  overflow-x: auto;
+}
