Make the status table scrollable too

--- a/app/views/bot/dashboard.html.erb
+++ b/app/views/bot/dashboard.html.erb
@@ -1,5 +1,8 @@
 <h1>Bot Status</h1>
-<table id="status"></table>
+
+<div class="scrollable-box">
+  <table id="status"></table>
+</div>
 
 <button class="btn-base btn-green" onClick=refresh()>Refresh</button>
 
