--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -85,7 +85,7 @@ body {
 
 pre {
   font-family: "Noto Sans Mono", monospace;
-  white-space: nowrap;
+  white-space: pre;
   background-color: #f5f5f5;
   padding: 10px;
   border-radius: 3px;
