--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -2,14 +2,73 @@ body {
   font-family: "Noto Sans Mono", monospace;
 }
 
+button svg {
+  width: 28px;
+  height: 28px;
+  fill: #fefefe;
+  vertical-align: middle;
+}
+
+.centered-cell {
+  text-align: center !important;
+}
+
+.btn-emoji-base {
+  font-family: "Noto Sans Mono", monospace;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  outline: none;
+  font-size: 1.5em;
+}
+
+.btn-emoji-green {
+  filter: hue-rotate(-120deg);
+}
+
+.btn-emoji-green:hover {
+  filter: hue-rotate(-120deg) brightness(0.8);
+}
+
+.btn-emoji-green:active {
+  filter: hue-rotate(-120deg) brightness(0.7);
+}
+
+.btn-emoji-red {
+  filter: hue-rotate(-220deg) saturate(1.5);
+}
+
+.btn-emoji-red:hover {
+  filter: hue-rotate(-220deg) saturate(1.5) brightness(0.8);
+}
+
+.btn-emoji-red:active {
+  filter: hue-rotate(-220deg) saturate(1.5) brightness(0.7);
+}
+
+.btn-emoji-yellow {
+  filter: hue-rotate(-180deg) brightness(1.3) saturate(2);
+}
+
+.btn-emoji-yellow:hover {
+  filter: hue-rotate(-180deg) saturate(2) brightness(1);
+}
+
+.btn-emoji-yellow:active {
+  filter: hue-rotate(-180deg) saturate(2) brightness(0.9);
+}
+
 .btn-base {
   font-family: "Noto Sans Mono", monospace;
-  border: 1px solid black;
-  border-radius: 6px;
+  border: none;
+  border-radius: 5px;
   color: #000;
-  padding: 6px 12px;
+  padding: 1px 1px;
   font-weight: 600;
   margin: 6px;
+  cursor: pointer;
 }
 
 .btn-green {
